[package]
name = "dagster-prom-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1"] }
prometheus-client = { version = "0.21.0" }
graphql_client = { version = "0.13.0", features = ["graphql_query_derive", "reqwest"] }
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["net"] }
url = { version = "2.4.0" }
bytes = { version = "1" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1" }
anyhow = { version = "1" }
parking_lot = { version = "0.12.1" }