[package]
name = "dagster-prom-exporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
repository = "https://gitlab.com/Chrisss93/dagster-prom-exporter"
keywords = ["metrics"]

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1"] }
prometheus-client = { version = "0.21.0" }
graphql_client = { version = "0.13.0", features = ["graphql_query_derive", "reqwest"] }
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["net"] }
url = { version = "2.4.0" }
bytes = { version = "1" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1" }
anyhow = { version = "1" }
parking_lot = { version = "0.12.1" }

[dev-dependencies]
testcontainers = { version = "0.15.0", features = ["experimental"] }
bollard = { version = "0.13.0" }
futures-util = { version = "0.3.28" }
tar = { version = "0.4.40" }
tokio = { version = "1.28.2", features = ["macros"] }
prometheus-parse = { version = "0.2.4" }
serde_json = { version = "1" }
indoc = { version = "2" }

[patch.crates-io]
testcontainers = { git = "https://github.com/Chrisss93/testcontainers-rs.git", branch = "experimental_inner_client" }

[[bin]]
name = "app"
path = "src/main.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
restriction = "warn"
nursery = "warn"

float_arithmetic = "allow"
future_not_send = "allow"
implicit_return = "allow"
ignored_unit_patterns = "allow"
min_ident_chars = "allow"
multiple_inherent_impl = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
multiple_unsafe_ops_per_block = "allow"
pub_with_shorthand = "allow"
semicolon_if_nothing_returned = "allow"
single_call_fn = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
std_instead_of_alloc = "allow"

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = true

[package.metadata.binstall]
[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[package.metadata.vet]
store = { path = "./.cargo/audits" }
